--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest --watchAll"
   },
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.17.0",
+    "@babel/runtime": "^7.17.2",
     "axios": "^0.21.1",
     "json-server": "^0.16.3",
     "react": "^17.0.1",
